--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,9 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
 :root {
-    --primary-color: #2e4b6d;
-    --secondary-color: #6d7f94;
-    --tertiary-color: #6d7f94;
+    --primary-color: #e6e7f0;
+    --secondary-color: #4064a5;
     --text-color: #e6e7f0;
     --background-color: #1d1d2e;
 }
@@ -33,6 +32,7 @@ body {
     font-family: 'Manrope';
     background-color: var(--background-color);
     color: var(--text-color);
+    overflow: hidden; 
 }
 
 @tailwind components;
